--- a/index.html
+++ b/index.html
@@ -7,5 +7,24 @@
     <script src="app.js"></script>
     <title>Tic-Tac-Toe with JS</title>
   </head>
-  <body></body>
+  <body>
+    <!-- BOARD -->
+    <div class="board" id="board">
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+    </div>
+    <!-- WINNING MSG -->
+    <div class="winning-message" id="winningMessage">
+      <div data-winning-message-text>
+        <button id="restartButton">Restart</button>
+      </div>
+    </div>
+  </body>
 </html>
