--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- BOARD -->
     <div class="board" id="board">
-      <div class="cell" data-cell></div>
+      <div class="cell x" data-cell></div>
       <div class="cell" data-cell></div>
       <div class="cell" data-cell></div>
       <div class="cell" data-cell></div>
