--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <!-- BOARD -->
-    <div class="board circle" id="board">
-      <div class="cell x" data-cell></div>
-      <div class="cell circle" data-cell></div>
+    <div class="board" id="board">
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
       <div class="cell" data-cell></div>
       <div class="cell" data-cell></div>
       <div class="cell" data-cell></div>
@@ -22,9 +22,8 @@
     </div>
     <!-- WINNING MSG -->
     <div class="winning-message" id="winningMessage">
-      <div data-winning-message-text>
-        <button id="restartButton">Restart</button>
-      </div>
+      <div data-winning-message-text></div>
+      <button id="restartButton">Restart</button>
     </div>
   </body>
 </html>
